# puzzle-solving-hub

./: .gitignore  README.md  docker-compose.yml  dockerfile  pyproject.toml  todo.md
core/: settings.py  urls.py
puzzles/: admin.py  forms.py  models.py  urls.py  views.py
puzzles/migrations/: 0001_initial.py  0002_alter_puzzlehub_id_alter_sourcetextentry_id.py  0003_alter_puzzlehub_description_and_more.py
users/: admin.py  models.py  signals.py
users/migrations/: 0001_initial.py  0002_alter_friendship_status.py
